# seamlesscontrol

./: meson.build  org.seamless.SeamlessControl.json  requirements.txt
data/: meson.build  org.seamless.SeamlessControl.appdata.xml.in  org.seamless.SeamlessControl.desktop.in  org.seamless.SeamlessControl.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  seamlesscontrol.gresource.xml  seamlesscontrol.in  style.css  window.py  window.ui
systemd/: broadwayd.service  seamlesscontrol.service
